[package]
name = "postgres-pool-simple"
version = "0.1.0-alpha.0"
authors = ["sfaerber <faerber.berlin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres = "0.5"
postgres-types = "0.1"
arc-swap = "0.4"
im = "15.0"
futures = "0.3"
log = "0.4"
ahash = "0.3.5"
async-std = "1.6.0"
tokio = "0.2"