[package]
name = "postgres-pool-simple"
version = "0.1.0-alpha.0"
authors = ["sfaerber <faerber.berlin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres = "0.7"
postgres-types = "0.2"
arc-swap = "1.2"
im = "15.0"
futures = "0.3"
log = "0.4"
ahash = "0.7"
async-std = "1.9"
tokio = "1.2"